--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL = 'https://medvault-backend-gy87.onrender.com'
+VITE_BACKEND_URL = https://medvault-backend-cqtw.onrender.com
 VITE_RAZORPAY_KEY_ID = '------ Razorpay Key Id here ------'
