--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Backend server for API services",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.3.0",
@@ -20,9 +21,14 @@
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4",
     "razorpay": "^2.9.4",
     "stripe": "^16.5.0",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
