--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js",
+    "server": "nodmon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
